CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( See++ CXX )

SET( CMAKE_EXPORT_COMPILE_COMMANDS ON )

LIST( APPEND CMAKE_MODULE_PATH
  ${CMAKE_SOURCE_DIR}/cmake/Modules
)

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -pedantic" )

FIND_PACKAGE( libclang REQUIRED )
INCLUDE_DIRECTORIES( ${LIBCLANG_INCLUDE_DIRS} SYSTEM )

ADD_EXECUTABLE( function-visitor
  function-visitor.cc
)

TARGET_LINK_LIBRARIES( function-visitor ${LIBCLANG_LIBRARIES} )
